--- a/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
@@ -157,8 +157,14 @@
                                             <fieldset class="border-primary">
                                                 <legend class="text-primary">Скорректировать</legend>
                                                 <div class="form-inline">
-                                                    <label class="col-form-label text-dark mr-2" for="manual_fee_amount">Плата:</label>
-                                                    <input class="form-control mr-sm-2" id="manual_fee_amount" name="manual_fee_amount" type="number">
+                                                    <div class="form-group mb-2">
+                                                        <label class="col-form-label text-dark mr-2" for="manual_fee_amount">Плата:</label>
+                                                        <input class="form-control mr-sm-2" id="manual_fee_amount" name="manual_fee_amount" type="number">
+                                                    </div>
+                                                    <div class="form-group mx-sm-3 mb-2">
+                                                        <label for="note" class="col-form-label text-dark mr-2">Примечание:</label>
+                                                        <input class="form-control mr-sm-2" id="note" name="note" type="text">
+                                                    </div>
                                                     <button class="btn btn-primary my-2 my-sm-0" id="bt_update_wagon" name="bt_update_wagon">Применить</button>
                                                 </div>
                                             </fieldset>
@@ -174,20 +180,6 @@
                                             </fieldset>
                                         </div>
                                     </div>
-                                    @*<div class="row mb-1">
-                                            <div class="col-sm-12">
-                                                <div class="card bg-light mb-3">
-                                                    <div class="card-header text-center">ВЫБРАННЫЕ ВАГОНЫ</div>
-                                                    <div class="card-body">
-                                                        <div class="row">
-                                                            <div class="col-sm-12" id="usage-fee-outgoing-cars">
-
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>*@
                                 </div>
                             </div>
                         </div>
